--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 100px;
+   scroll-padding-top: 60px;
+
+}
 
 header{
     position : sticky;
@@ -109,8 +115,8 @@ input, textarea{
     top:0;
     left: 0;
     z-index: 1;
-    height: 100vh;
-    width: 100vw;
+    height: 10vh;
+    width: 10vw;
     background-color: rgba(69, 69, 69, 0.666);
 }
 
